--- a/package.json
+++ b/package.json
@@ -15,18 +15,19 @@
   "main": "build/index.js",
   "scripts": {
     "start": "webpack-serve --config ./webpack.serve.config.js --open",
-    "validate-init": "python ./scripts/_validate_init.py",
-    "build": "yarn run build:js && yarn run build:backends",
+    "build": "yarn run build:js && yarn run build:py",
     "build:js": "webpack --mode production",
-    "build:py": "poetry run dash-generate-components ./src/lib/components ./build/dash_mdc_neptune -p package-info.json"
+    "build:py": "poetry run dash-generate-components ./src/lib/components ./build/dash_mdc_neptune -p package-info.json",
+    "validate:py": "poetry run python ./scripts/_validate_init.py",
+    "launch:py": "poetry run jupyter lab --port 8000 --notebook-dir ./notebooks"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
-    "@plotly/webpack-dash-dynamic-import": "^1.2.0",
     "@plotly/dash-component-plugins": "^1.2.0",
+    "@plotly/webpack-dash-dynamic-import": "^1.2.0",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "copyfiles": "^2.1.1",
@@ -37,17 +38,20 @@
     "eslint-plugin-react": "^7.14.2",
     "npm": "^6.1.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.6",
+    "react": "^17.0.0",
     "react-docgen": "^4.1.1",
-    "react-dom": "^16.8.6",
-    "styled-jsx": "^3.2.1",
+    "react-dom": "^17.0.2",
     "style-loader": "^0.23.1",
+    "styled-jsx": "^3.2.1",
     "terser-webpack-plugin": "^2.3.0",
     "webpack": "4.36.1",
     "webpack-cli": "3.3.6",
     "webpack-serve": "3.1.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.2",
     "ramda": "^0.26.1"
   }
 }
