--- a/package.json
+++ b/package.json
@@ -50,7 +50,9 @@
   "dependencies": {
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
+    "@mui/styles": "^5.2.2",
     "ramda": "^0.26.1"
   }
 }
