--- a/package.json
+++ b/package.json
@@ -20,39 +20,37 @@
     "build:py": "poetry run dash-generate-components ./src/components dash_mdc_neptune -p package-info.json",
     "launch:py": "poetry run jupyter lab --port 8000 --notebook-dir ./notebooks"
   },
+  "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "prop-types": "^15.7.2",
+    "ramda": "^0.27.1"
+  },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
+    "@babel/core": "^7.14.6",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-env": "^7.14.7",
+    "@babel/preset-react": "^7.14.5",
     "@plotly/dash-component-plugins": "^1.2.0",
     "@plotly/webpack-dash-dynamic-import": "^1.2.0",
-    "babel-eslint": "^10.0.2",
-    "babel-loader": "^8.0.6",
-    "copyfiles": "^2.1.1",
-    "css-loader": "^3.0.0",
-    "eslint": "^6.0.1",
-    "eslint-config-prettier": "^6.0.0",
-    "eslint-plugin-import": "^2.18.0",
-    "eslint-plugin-react": "^7.14.2",
-    "npm": "^6.1.0",
-    "prop-types": "^15.7.2",
-    "react": "^17.0.0",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
+    "copyfiles": "^2.4.1",
+    "es-check": "^5.2.4",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-react": "^7.24.0",
+    "react": "^16.14.0",
     "react-docgen": "^4.1.1",
-    "react-dom": "^17.0.2",
-    "style-loader": "^0.23.1",
-    "styled-jsx": "^3.2.1",
+    "react-dom": "^16.14.0",
+    "style-loader": "^3.0.0",
+    "styled-jsx": "^3.4.4",
     "terser-webpack-plugin": "^2.3.0",
-    "webpack": "4.36.1",
-    "webpack-cli": "3.3.6",
-    "webpack-serve": "3.1.0"
+    "webpack": "^5.43.0",
+    "webpack-cli": "^4.7.2"
   },
-  "dependencies": {
-    "@emotion/react": "^11.7.0",
-    "@emotion/styled": "^11.6.0",
-    "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.2",
-    "@mui/styles": "^5.2.2",
-    "ramda": "^0.26.1"
+  "peerDependencies": {
+    "react": ">=16",
+    "react-dom": ">=16"
   }
 }
