--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "launch:py": "poetry run jupyter lab --port 8000 --notebook-dir ./notebooks"
   },
   "dependencies": {
+    "@fontsource/roboto": "^4.5.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "prop-types": "^15.7.2",
