--- a/package.json
+++ b/package.json
@@ -14,14 +14,19 @@
   },
   "main": "build/index.js",
   "scripts": {
-    "start": "webpack-serve --config ./webpack.serve.config.js --open",
-    "build": "yarn run build:js && yarn run build:py",
+    "format:eslint": "eslint ./src --fix",
+    "format:prettier": "prettier ./src --config .prettierrc --write",
+    "lint:eslint": "eslint ./src",
+    "lint:prettier": "prettier ./src --config .prettierrc --list-different",
+    "format": "yarn run format:prettier & yarn run format:eslint",
+    "lint": "yarn run lint:prettier && yarn run lint:eslint",
     "build:js": "webpack --mode production",
+    "watch:js": "webpack --watch --mode development",
     "build:py": "poetry run dash-generate-components ./src/components dash_mdc_neptune -p package-info.json",
-    "launch:py": "poetry run jupyter lab --port 8000 --notebook-dir ./notebooks"
+    "build": "yarn run build:js && yarn run build:py",
+    "postbuild": "es-check es6 dash_mdc_neptune/*.js"
   },
   "dependencies": {
-    "@fontsource/roboto": "^4.5.1",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "prop-types": "^15.7.2",
@@ -29,22 +34,23 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.16.3",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.4",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@plotly/dash-component-plugins": "^1.2.0",
     "@plotly/webpack-dash-dynamic-import": "^1.2.0",
-    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "copyfiles": "^2.4.1",
     "es-check": "^5.2.4",
+    "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react": "^7.24.0",
+    "prettier": "^2.3.2",
     "react": "^16.14.0",
     "react-docgen": "^4.1.1",
     "react-dom": "^16.14.0",
-    "style-loader": "^3.0.0",
     "styled-jsx": "^3.4.4",
     "terser-webpack-plugin": "^2.3.0",
     "webpack": "^5.43.0",
