--- a/package.json
+++ b/package.json
@@ -12,13 +12,12 @@
   "engines": {
     "node": ">=14"
   },
-  "main": "build/index.js",
   "scripts": {
     "format:eslint": "eslint ./src --fix",
     "format:prettier": "prettier ./src --config .prettierrc --write",
+    "format": "yarn run format:prettier & yarn run format:eslint",
     "lint:eslint": "eslint ./src",
     "lint:prettier": "prettier ./src --config .prettierrc --list-different",
-    "format": "yarn run format:prettier & yarn run format:eslint",
     "lint": "yarn run lint:prettier && yarn run lint:eslint",
     "build:js": "webpack --mode production",
     "watch:js": "webpack --watch --mode development",
@@ -57,7 +56,9 @@
     "webpack-cli": "^4.7.2"
   },
   "peerDependencies": {
-    "react": ">=16",
-    "react-dom": ">=16"
+    "react": "^16.0",
+    "react-dom": "^16.0",
+    "@material-ui/core": "^4.0",
+    "@material-ui/icons": "^4.0"
   }
 }
