--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "watch": "webpack --watch --mode development"
   },
   "dependencies": {
-    "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "@material-ui/core": "^4.0",
+    "@material-ui/icons": "^4.0",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/styles": "^4.0",
+    "@mui/x-data-grid": "^4.0",
     "prop-types": "^15.7.2",
     "ramda": "^0.27.1"
   },
@@ -47,18 +50,18 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
-    "react": "^16.14.0",
+    "react": "^17.0",
     "react-docgen": "^4.1.1",
-    "react-dom": "^16.14.0",
+    "react-dom": "^17.0",
     "styled-jsx": "^3.4.4",
     "terser-webpack-plugin": "^2.3.0",
     "webpack": "^5.43.0",
     "webpack-cli": "^4.7.2"
   },
   "peerDependencies": {
-    "react": "^16.0",
-    "react-dom": "^16.0",
     "@material-ui/core": "^4.0",
-    "@material-ui/icons": "^4.0"
+    "@material-ui/icons": "^4.0",
+    "react": "^17.0",
+    "react-dom": "^17.0"
   }
 }
