--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "@material-ui/icons": "^4.0",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "@material-ui/styles": "^4.0",
-    "prop-types": "^15.7.2",
-    "ramda": "^0.27.1"
+    "prop-types": "^15.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
@@ -49,9 +48,9 @@
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react": "^7.24.0",
     "prettier": "^2.3.2",
-    "react": "^17.0",
+    "react": "^16.0",
     "react-docgen": "^4.1.1",
-    "react-dom": "^17.0",
+    "react-dom": "^16.0",
     "styled-jsx": "^3.4.4",
     "terser-webpack-plugin": "^2.3.0",
     "webpack": "^5.43.0",
@@ -60,7 +59,8 @@
   "peerDependencies": {
     "@material-ui/core": "^4.0",
     "@material-ui/icons": "^4.0",
-    "react": "^17.0",
-    "react-dom": "^17.0"
+    "@material-ui/lab": "^4.0",
+    "react": "^16.0",
+    "react-dom": "^16.0"
   }
 }
