Implement functional tests for layout components

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,4 +24,4 @@ python_classes = Test
 python_functions = test_*
 junit_family = xunit2
 filterwarnings = error::RuntimeWarning
-addopts = --junitxml=pytest.xml
+addopts = --headless --webdriver=Firefox --junitxml=pytest.xml
