--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.8"
 dash = ">=1.15.0"
+matplotlib = "*"
 
 [tool.poetry.dev-dependencies]
 dash = { version = ">=1.15.0", extras = ["dev", "testing"] }
