--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "watch": "webpack --watch --mode development"
   },
   "dependencies": {
+    "date-fns": "^2.0",
+    "@date-io/core": "^1.0",
+    "@date-io/date-fns": "^1.0",
     "@material-ui/core": "^4.0",
     "@material-ui/icons": "^4.0",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@material-ui/pickers": "^3.0",
     "@material-ui/styles": "^4.0",
     "prop-types": "^15.7.2"
   },
