Update CI config and filter warnings in pyproject.toml
- bump orb version to 0.1.17
- update CI job names
- include poetry install args in CI jobs
- filter UserWarning and DeprecationWarning in pytest

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -91,5 +91,9 @@ python_files = "test_*.py"
 python_classes = "Test"
 python_functions = "test_*"
 junit_family = "xunit2"
-filterwarnings = "error::RuntimeWarning"
+filterwarnings = [
+    "error::RuntimeWarning",
+    "ignore::DeprecationWarning",
+    "ignore::UserWarning"
+]
 addopts = "--headless --webdriver=Firefox --junitxml=pytest.xml"
