--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ version: 2.1
 
 orbs:
 
-  noos-ci: noosenergy/noos-ci@0.1.14
+  noos-ci: noosenergy/noos-ci@0.1.17
 
 
 # --------------
@@ -16,30 +16,36 @@ orbs:
 
 jobs:
 
-  lint-package:
-    executor: noos-ci/default
+  lint_package:
+    executor:
+      name: noos-ci/default
+      # tag: 3.8.17
     steps:
       - checkout
-      - noos-ci/python-lint-package:
-          pkg-manager: poetry
-          install-args: ''
-          src-directory: ./dash_mdc_neptune
+      - noos-ci/python_lint_package:
+          pkg_manager: poetry
+          install_args: --no-ansi --with dev
+          src_directory: ./dash_mdc_neptune
 
-  lint-library:
-    executor: noos-ci/default
+  lint_library:
+    executor:
+      name: noos-ci/default
+      # tag: 3.8.17
     steps:
       - checkout
       - run:
           name: Lint JavaScript library
           command: yarn install && yarn lint
 
-  build-library:
-    executor: noos-ci/default
+  build_library:
+    executor:
+      name: noos-ci/default
+      # tag: 3.8.17
     steps:
       - checkout
-      - noos-ci/python-configure-venv:
-          pkg-manager: poetry
-          install-args: ''
+      - noos-ci/python_configure_venv:
+          pkg_manager: poetry
+          install_args: --no-ansi --with dev
       - run:
           name: Build JavaScript library
           command: yarn install && yarn build
@@ -48,39 +54,45 @@ jobs:
           paths:
             - dash_mdc_neptune
 
-  test-package:
-    executor: noos-ci/default
+  test_package:
+    executor:
+      name: noos-ci/default
+      # tag: 3.8.17
     steps:
       - checkout
       - attach_workspace:
           at: .
-      - noos-ci/python-test-package:
-          pkg-manager: poetry
-          install-args: ''
-          tests-directory: ./tests
+      - noos-ci/python_test_package:
+          pkg_manager: poetry
+          install_args: --no-ansi --with dev
+          tests_directory: ./tests
 
-  build-wheel:
-    executor: noos-ci/default
+  build_wheel:
+    executor:
+      name: noos-ci/default
+      # tag: 3.8.17
     steps:
       - checkout
       - attach_workspace:
           at: .
-      - noos-ci/python-build-wheel:
-          pkg-manager: poetry
-          install-args: ''
+      - noos-ci/python_build_wheel:
+          pkg_manager: poetry
+          install_args: --no-ansi --with dev
       - store_artifacts:
           path: dist
           destination: wheel
 
-  publish-wheel:
-    executor: noos-ci/default
+  publish_wheel:
+    executor:
+      name: noos-ci/default
+      # tag: 3.8.17
     steps:
       - checkout
       - attach_workspace:
           at: .
-      - noos-ci/python-publish-wheel:
-          pkg-manager: poetry
-          install-args: ''
+      - noos-ci/python_publish_wheel:
+          pkg_manager: poetry
+          install_args: --no-ansi --with dev
 
 
 # -----------------
@@ -91,24 +103,24 @@ workflows:
 
   version: 2
 
-  lint-test-build:
+  lint_test_build:
     jobs:
-      - lint-library
-      - build-library:
+      - lint_library
+      - build_library:
           requires:
-            - lint-library
-      - lint-package
-      - test-package:
+            - lint_library
+      - lint_package
+      - test_package:
           requires:
-            - build-library
-      - build-wheel:
+            - build_library
+      - build_wheel:
           requires:
-            - lint-package
-            - test-package
+            - lint_package
+            - test_package
 
   publish:
     jobs:
-      - approve-for-publishing:
+      - approve_for_publishing:
           type: approval
           filters:
             tags:
@@ -116,18 +128,18 @@ workflows:
               only: /[0-9]+(\.[0-9]+)*(-alpha\.[0-9]+)?/
             branches:
               ignore: /.*/
-      - build-library:
+      - build_library:
           requires:
-            - approve-for-publishing
+            - approve_for_publishing
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*(-alpha\.[0-9]+)?/
             branches:
               ignore: /.*/
-      - publish-wheel:
+      - publish_wheel:
           context: PYPI_SHARED
           requires:
-            - build-library
+            - build_library
           filters:
             tags:
               only: /[0-9]+(\.[0-9]+)*(-alpha\.[0-9]+)?/
