Update devcontainer, CI config and pyptoject.toml
- remove tag from CI executor
- remove postCreateCommand from devcontainer
- update test results path and linter config in pyptoject.toml

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -31,6 +31,5 @@
 		}
 	},
 
-	"onCreateCommand": "poetry install --with dev",
-	"postCreateCommand": "sudo apt remove firefox && sudo add-apt-repository ppa:mozillateam/ppa -y && echo '\nPackage: *\nPin: release o=LP-PPA-mozillateam\nPin-Priority: 1001\n' | sudo tee /etc/apt/preferences.d/mozilla-firefox && sudo apt install firefox"
+	"onCreateCommand": "poetry install --with dev"
   }
