Create InputText component, optional inputText in slider
- Add optional showInputText to slider
- Update jupyter notebooks to test new components
- InputText allow types: text, integer, or float
- Validate inputText with regular expressions
- Add 'precision' prop to limit number of decimal places
- Add javascript unit tests for Slider and InputText using react testing-library and Jest
- Add 'yarn test' to package.json
- Add yarn test step to CI config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -68,7 +68,10 @@ jobs:
           tests_directory: ./tests
           <<: *poetry_install
       - store_test_results:
-          path: ".pytest_results"
+          path: '.pytest_results'
+      - run:
+          name: JavaScript unit tests
+          command: yarn install && yarn test
 
   build_wheel:
     executor:
