--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "build:py": "poetry run dash-generate-components ./src/components dash_mdc_neptune -p package-info.json",
     "build": "yarn run build:js && yarn run build:py",
     "postbuild": "es-check es6 dash_mdc_neptune/*.js",
-    "watch": "webpack --watch --mode development"
+    "watch": "webpack --watch --mode development",
+    "test": "jest"
   },
   "dependencies": {
     "@date-io/core": "^1.0",
@@ -43,12 +44,15 @@
     "@babel/preset-react": "^7.14.5",
     "@plotly/dash-component-plugins": "^1.2.0",
     "@plotly/webpack-dash-dynamic-import": "^1.2.0",
+    "@testing-library/jest-dom": "^6.1.3",
+    "@testing-library/react": "12.x",
     "babel-loader": "^8.2.2",
     "es-check": "^5.2.4",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react": "^7.24.0",
+    "jest": "26.x",
     "prettier": "^2.3.2",
     "react": "^16.0",
     "react-docgen": "^4.1.1",
