--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   },
   "version": "0.3.0",
   "engines": {
-    "node": ">=16"
+    "node": ">=18"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   },
   "scripts": {
     "format:eslint": "eslint ./src --fix",
@@ -40,6 +43,7 @@
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/eslint-parser": "^7.16.3",
+    "@babel/plugin-proposal-object-rest-spread": "^7.20.7",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@plotly/dash-component-plugins": "^1.2.0",
@@ -52,7 +56,8 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-react": "^7.24.0",
-    "jest": "26.x",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^2.3.2",
     "react": "^16.0",
     "react-docgen": "^4.1.1",
