Add separate CI job for JS testing

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,8 +53,9 @@ jobs:
           root: .
           paths:
             - dash_mdc_neptune
+            - node_modules
 
-  test_package:
+  test_package_python:
     executor: noos-ci/default
     steps:
       - checkout
@@ -65,9 +66,16 @@ jobs:
           <<: *poetry_install
       - store_test_results:
           path: '.pytest_results'
+
+  test_package_javascript:
+    executor: noos-ci/default
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
       - run:
           name: JavaScript unit tests
-          command: yarn install && yarn test
+          command: yarn test
 
   build_wheel:
     executor: noos-ci/default
@@ -104,13 +112,17 @@ workflows:
           requires:
             - lint_library
       - lint_package
-      - test_package:
+      - test_package_python:
+          requires:
+            - build_library
+      - test_package_javascript:
           requires:
             - build_library
       - build_wheel:
           requires:
             - lint_package
-            - test_package
+            - test_package_python
+            - test_package_javascript
 
   publish:
     jobs:
