--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,5 +32,5 @@
       }
     }
   },
-  "onCreateCommand": "poetry install --with dev"
+  "onCreateCommand": "sh ${containerWorkspaceFolder}/.devcontainer/post-create.sh"
 }
