--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
   "dependencies": {
     "@date-io/core": "^1.0",
     "@date-io/date-fns": "^1.0",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.0",
     "@material-ui/icons": "^4.0",
     "@material-ui/lab": "^4.0.0-alpha.60",
