--- a/package.json
+++ b/package.json
@@ -30,8 +30,6 @@
     "test": "jest ./src"
   },
   "dependencies": {
-    "@date-io/core": "^1.0",
-    "@date-io/date-fns": "^1.0",
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@material-ui/core": "^4.0",
@@ -43,7 +41,8 @@
     "@mui/lab": "^5.0.0-alpha.159",
     "@mui/material": "^5.15.3",
     "@mui/styles": "^5.15.3",
-    "date-fns": "^2.0",
+    "@mui/x-date-pickers": "^6.18.7",
+    "date-fns": "^2.25.0",
     "prop-types": "^15.7.2"
   },
   "devDependencies": {
