setting prettier as default formatter for vscode
this matches yarn format:prettier script

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "editor.formatOnSave": true,
+  "[javascript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
   "npm.packageManager": "yarn",
   "[python]": {
     "editor.codeActionsOnSave": {
