--- a/package.json
+++ b/package.json
@@ -48,8 +48,8 @@
     "@babel/preset-react": "^7.14.5",
     "@plotly/dash-component-plugins": "^1.2.0",
     "@plotly/webpack-dash-dynamic-import": "^1.2.0",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "12.x",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
     "babel-loader": "^8.2.2",
     "es-check": "^5.2.4",
     "eslint": "^8.3.0",
@@ -59,9 +59,9 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^2.3.2",
-    "react": "^17.0.0",
+    "react": "^18.2.0",
     "react-docgen": "^4.1.1",
-    "react-dom": "^17.0.0",
+    "react-dom": "^18.2.0",
     "styled-jsx": "^3.4.4",
     "webpack": "^5.43.0",
     "webpack-cli": "^4.7.2"
