--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "@mui/material": "^5.15.3",
     "@mui/styles": "^5.15.3",
     "@mui/x-date-pickers": "^6.18.7",
+    "@types/jest": "^29.5.11",
+    "@types/react": "^18.2.47",
+    "@types/react-dom": "^18.2.18",
     "date-fns": "^2.25.0",
     "prop-types": "^15.7.2"
   },
@@ -52,6 +55,7 @@
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.7.1",
     "es-check": "^5.2.4",
     "eslint": "^8.3.0",
     "eslint-config-prettier": "^8.3.0",
@@ -61,11 +65,14 @@
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^2.3.2",
     "react": "^18.2.0",
-    "react-docgen": "^4.1.1",
+    "react-docgen": "^5.4.0",
     "react-dom": "^18.2.0",
+    "style-loader": "^3.3.1",
     "styled-jsx": "^3.4.4",
-    "webpack": "^5.43.0",
-    "webpack-cli": "^4.7.2"
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.7.4",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
   },
   "peerDependencies": {
     "react": "^16.0",
