--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "lint:eslint": "eslint ./src",
     "lint:prettier": "prettier ./src --config .prettierrc --list-different",
     "lint": "yarn run lint:prettier && yarn run lint:eslint",
-    "build:js": "webpack --mode production",
     "build:py": "poetry run dash-generate-components ./src/components dash_material_components -p package-info.json",
-    "build": "yarn run build:js && yarn run build:py",
     "postbuild": "es-check es7 dash_material_components/*.js",
-    "watch": "webpack --watch --mode development",
-    "test": "jest ./src"
+    "test": "jest ./src",
+    "build:js::dev": "webpack --mode development",
+    "build:js": "webpack",
+    "build:backends": "poetry run dash-generate-components ./src/components dash_material_components -p package-info.json --r-prefix '' --jl-prefix '' --ignore \\.test\\.",
+    "build": "npm run build:js && npm run build:backends",
+    "watch": "npm run build:js::dev -- --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -41,7 +43,7 @@
     "@types/react": "^18.2.47",
     "@types/react-dom": "^18.2.18",
     "date-fns": "^2.25.0",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
