--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react",
-    "baseUrl": "src/ts",
+    "baseUrl": "src",
     "inlineSources": true,
     "sourceMap": true,
     "esModuleInterop": true,
