--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "lib": ["ES7", "dom"],
     "noImplicitAny": false,
     "noImplicitThis": true,
-    "strictNullChecks": true
+    "strictNullChecks": false
   },
   "exclude": ["node_modules"]
 }
