--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@plotly/webpack-dash-dynamic-import": "^1.2.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "12.x",
+    "@testing-library/user-event": "^14.5.2",
     "babel-loader": "^8.2.2",
     "es-check": "^5.2.4",
     "eslint": "^8.3.0",
