--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "testEnvironment": "jsdom"
   },
   "scripts": {
-    "format:eslint": "eslint ./src --fix",
+    "format:eslint": "eslint ./src --fix --ext .js,.jsx,.ts,.tsx",
     "format:prettier": "prettier ./src --config .prettierrc --write",
     "format": "yarn run format:prettier & yarn run format:eslint",
     "lint:eslint": "eslint ./src",
@@ -56,13 +56,15 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "@typescript-eslint/eslint-plugin": "^6.19.0",
+    "@typescript-eslint/parser": "^6.19.0",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.7.1",
     "es-check": "^5.2.4",
-    "eslint": "^8.3.0",
+    "eslint": "^8.56.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react": "^7.33.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^2.3.2",
