--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "sourceMap": true,
     "esModuleInterop": true,
     "lib": ["ES7", "dom"],
-    "noImplicitAny": true,
+    "noImplicitAny": false,
     "noImplicitThis": true,
     "strictNullChecks": false,
     "jsx": "react-jsx",
